# store

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json
.github/: dependabot.yaml
.github/actions/setup-dioxus/: action.yaml
.github/workflows/: analysis.yaml  cd.yaml  tests.yaml
app/: Cargo.toml  build.rs  index.html  playwright.config.js  style.css
app/end2end/: home.spec.js  shared_expects.js
app/src/: app.rs  constants.rs  layout.rs  main.rs  routes.rs
app/src/pages/: home_page.rs
core/: Cargo.toml
